Add more detailed content to the README.